# web-app

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_14_2232-208be5b70eae_create_products_table.py  2024_10_18_1539-6d1dce1d25d6_regenarate_tables_in_new_database.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py  redis_dependency.py
core/db/: __init__.py  base.py  db_helper.py  products.py
users/: schemas.py  views.py
